<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoContacto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryRojo"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light" />


    <ImageView
        android:id="@+id/ivFotografia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/content_fotoUser"
        android:src="@drawable/foto_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/tvNombre"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_etNombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFotografia" />

    <EditText
        android:id="@+id/tvApellidos"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_etApellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@id/ivFotografia" />

    <EditText
        android:id="@+id/tvEmpresa"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_empresa"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <TextView
        android:id="@+id/textoEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/titulo_edad"
        app:layout_constraintEnd_toStartOf="@id/textoDireccion"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <TextView
        android:id="@+id/textoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/textoDireccion"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <TextView
        android:id="@+id/textoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/titulo_direccion"
        app:layout_constraintEnd_toEndOf="@id/tvEmpresa"
        app:layout_constraintStart_toStartOf="@id/tvEmpresa"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <EditText
        android:id="@+id/tvEdad"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_edad"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/tvDireccion"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoEdad" />


    <EditText
        android:id="@+id/tvPeso"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/tvDireccion"
        app:layout_constraintTop_toBottomOf="@id/textoPeso" />

    <EditText
        android:id="@+id/tvDireccion"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_direccion"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@id/textoDireccion"
        app:layout_constraintStart_toStartOf="@id/textoDireccion"
        app:layout_constraintTop_toBottomOf="@id/textoDireccion" />

    <TextView
        android:id="@+id/textoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdad" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/titulo_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@id/textoTelefono"
        app:layout_constraintTop_toBottomOf="@id/tvPeso" />

    <EditText
        android:id="@+id/tvTelefono"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_telefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoTelefono"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tvEmail"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoEmail"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>