<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryRojo"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ImageView
        android:id="@+id/ivFotografia"
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/content_fotoUser"
        android:src="@drawable/foto_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/colorPrimaryVariantRojoOscuro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFotografia" />

    <TextView
        android:id="@+id/tvEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <TextView
        android:id="@+id/textoEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/titulo_edad"
        app:layout_constraintEnd_toStartOf="@id/textoDireccion"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <TextView
        android:id="@+id/textoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/textoDireccion"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <TextView
        android:id="@+id/textoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/titulo_direccion"
        app:layout_constraintEnd_toEndOf="@id/tvEmpresa"
        app:layout_constraintStart_toStartOf="@id/tvEmpresa"
        app:layout_constraintTop_toBottomOf="@id/tvEmpresa" />

    <TextView
        android:id="@+id/tvEdad"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/tvDireccion"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoEdad" />

    <TextView
        android:id="@+id/tvPeso"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/tvDireccion"
        app:layout_constraintTop_toBottomOf="@id/textoPeso" />

    <TextView
        android:id="@+id/tvDireccion"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/textoDireccion"
        app:layout_constraintStart_toStartOf="@id/textoDireccion"
        app:layout_constraintTop_toBottomOf="@id/textoDireccion" />

    <TextView
        android:id="@+id/textoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/titulo_telefono"
        app:layout_constraintStart_toStartOf="@id/ivFotografia"
        app:layout_constraintTop_toBottomOf="@id/tvEdad" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:text="@string/titulo_email"
        app:layout_constraintEnd_toEndOf="@id/ivFotografia"
        app:layout_constraintHorizontal_bias=".90"
        app:layout_constraintStart_toEndOf="@id/textoTelefono"
        app:layout_constraintTop_toBottomOf="@id/tvPeso" />

    <TextView
        android:id="@+id/tvTelefono"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoTelefono"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toEndOf="@id/tvTelefono"
        app:layout_constraintTop_toBottomOf="@id/textoTelefono"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>